--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neon Button Blue</title>
+  <title>Glow Button Blue</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   
-  <button class="btn-1">Neon Button</button>
-  <button class="btn-2">Neon Button</button>
-  <button class="btn-3">Neon Button</button>
-  <button class="btn-4">Neon Button</button>
-  <button class="btn-5">Neon Button</button>
-  <button class="btn-6">Neon Button</button>
-  <button class="btn-7">Neon Button</button>
-  <button class="btn-8">Neon Btn</button>
+  <button class="btn-1">Glow Button</button>
+  <button class="btn-2">Glow Button</button>
+  <button class="btn-3">Glow Button</button>
+  <button class="btn-4">Glow Button</button>
+  <button class="btn-5">Glow Button</button>
+  <button class="btn-6">Glow Button</button>
+  <button class="btn-7">Glow Button</button>
+  <button class="btn-8">Glow Btn</button>
   
 </body>
 </html>
