--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <button class="btn-5">Glow Button</button>
   <button class="btn-6">Glow Button</button>
   <button class="btn-7">Glow Button</button>
-  <button class="btn-8">Glow Btn</button>
+  <button class="btn-8">Glo Btn</button>
   
 </body>
 </html>
